--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
-
         <!-- Search bar and buttons -->
-        <input type="text" placeholder="Search for recommendations...">
-        <button type="button">Search</button>
-        <button type="reset" class="reset-button">Reset</button>
+
+        <div id="search_inside_nav">
+                <div><input type="text" id="search_input" placeholder="Enter a destination or Keyword" ></div>
+                <div id="search_btn" onclick="recommend()"><img src="./images/navbar/search_btn.svg" alt=""></div>
+                <div class="nav_btn" ><button onclick="recommend()">Search</button></div>
+                <div class="nav_btn"><button onclick="clearall()">Clear</button></div>
+            </div>
     </div>
 <div class="hero">
     <div class="hero-content">
@@ -26,5 +29,6 @@
             <p>Discover authentic reviews and recommendations for your next adventure.</p>
         </div>
 </div>
+    <script src="./travel_recommendation.js"></script>
 </body>
 </html>
