--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
             <p>Discover authentic reviews and recommendations for your next adventure.</p>
         </div>
 </div>
+
+     <div id="home_page_under_nav">
+            <div id="under_nav_left_side">
+                <div id="line_image_home_page"><img src="./images/home_page/line_home_page.png" alt=""></div>
+                <div> <div  class="social_media_icons_home_page"><a href=""><img src="./images/home_page/twitter_logo.svg" alt=""></a></div>
+                <div class="social_media_icons_home_page"><a href=""><img src="./images/home_page/facebook_logo.svg" alt=""></a></div>
+                <div class="social_media_icons_home_page"><a href=""><img src="./images/home_page/insta_logo.svg" alt=""></a></div>
+                <div class="social_media_icons_home_page"><a href=""><img src="./images/home_page/youtube_logo.svg" alt=""></a></div></div>
+            </div>
+            <div id="home_page_full_right_side">
+                <div id="large_heading_home_page">Explore Dream Destination</div>
+                <div id="qoute_home_page">It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonde.</div>
+                <div> <button id="book_btn">Book Now</button></div>
+            </div>
+            <div> <div id="result_under_search"></div> </div>
+        </div>
+    </div>
     <script src="./travel_recommendation.js"></script>
 </body>
 </html>
