--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -17,7 +17,7 @@
 
         <div id="search_inside_nav">
                 <div><input type="text" id="search_input" placeholder="Enter a destination or Keyword" ></div>
-                <div id="search_btn" onclick="recommend()"><img src="./images/navbar/search_btn.svg" alt=""></div>
+                <div id="search_btn" onclick="recommend()"></div>
                 <div class="nav_btn" ><button onclick="recommend()">Search</button></div>
                 <div class="nav_btn"><button onclick="clearall()">Clear</button></div>
             </div>
