--- a/about.html
+++ b/about.html
@@ -47,6 +47,19 @@ For inquiries, reach out to us </p>
         </div>
 </div>
 
+
+
+ <div id="home_page_under_nav">
+            
+            <div id="home_page_full_right_side">
+                <div id="large_heading_home_page">Explore Dream Destination</div>
+                <div id="qoute_home_page">It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonde.</div>
+                <div> <button id="book_btn">Book Now</button></div>
+            </div>
+            <div> <div id="result_under_search"></div> </div>
+        </div>
+    </div>
+
      <script src="./travel_recommendation.js"></script>
 
 </body>
